--- a/Documentation/final_report_v2.tex
+++ b/Documentation/final_report_v2.tex
@@ -138,7 +138,6 @@
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
 
 \center 
- 
 %----------------------------------------------------------------------------------------
 %   HEADING SECTIONS
 %----------------------------------------------------------------------------------------
@@ -204,9 +203,12 @@ This project uses MySql as its preferred database for storing operational data, 
 \clearpage
 
 \section{Introduction}
-University Bus systems are critical for shuttling students in and out of university campuses. These bus systems are not only used at Indiana University, but also at other university systems like University Transit Service,University of Virginia\cite{2}, The Bus, Boston University system \cite{3} ,etc. All these universities have similar kind of schedules for different semesters like Spring, Fall and special trips during late nights. All these services have an live tracking system which records the bus statuses, Geo-locations of buses and their stops and is presented real-time to the users. We also consider Cintra, Neves as one of the approaches for prediction\cite{4}\\ \\
+University Bus systems are critical for shuttling students in and out of university campuses. These bus systems are not only used at Indiana University, but also at other university systems like University Transit Service,University of Virginia\cite{2}, The Bus, Boston University system \cite{3} ,etc. All these universities have similar kind of schedules for different semesters like Spring, Fall and special trips during late nights. All these services have an live tracking system which records the bus statuses, Geo-locations of buses and their stops and is presented real-time to the users. We also consider Cintra, Neves\cite{4} as one of the approaches for prediction\\
+
 IU Bus system has four routes A,B,E and X and has about 52 stops including the minor and major stops. These busses are scheduled about one bus in every 15 minutes for use of its passengers. IU Bus System commits itself to stick to the schedule\cite{5}, however as with any transportation system, the bus gains or looses speed during the course of the travel, thereby deviating form the actual schedule. \\ \\
+
 Thus, primary interest of this study is to understand the time difference between the schedule time and the actual time, $t_{schedule} - t_{actual}$. An model was created in Neo4j depicting the acutal bus system, and the ability of the graph database serves in the shortest paths problem and going from place A to place B. \\
+
 In addition to the above said studies, an statistical model was developed in R to predict the arrival status of the bus at a given stop. The statuses can be On-Time, Delayed and Early, an detailed explanation is given in the corresponding sections. In addition to these, a reporting solution was developed in Tableau and is hosted on cloud at location given below. Here, detailed reporting of status of each trips for Spring 2015 for Route A is available. This includes the bus arrival status and the seconds by which the bus is early / on-time. \\
 
 Following are the locations of the project artifacts:
@@ -290,6 +292,7 @@ Another interesting trend is that as the day progresses, dwell time increases in
 All these graphs and more visualizations are available in the Github Repository, \url{https://github.com/sarvothaman/nefarious-octo-rutabaga/tree/master/EDA}
 \section{Reporting}
 The Main objective of this case study is to report how consistent the busses run in accordance to the schedule. ie, the time deviation $t_{schedule}-t_{acutal}$ is an important metric. Tableau reporting solution was used to report these findings. \\
+
 Tableau provides an excellent platform for developing these reports. The variance reports are reports which gives the flexibility to select the month, data, route and trip and check the variance in each stops. This is available on cloud and can be accessed by anyone for free. Below is the screenshot of the application hosted.\\
 \includegraphics[scale=0.4]{resources/tableau4}\\[1cm] 
 For example, the above shown trip is the 3rd trip of A1 on January 26th 2015. It can be seen that the departure from stadium A is at 11:13, however the bus departed at 11:14 bringing with a minute delay. It is interesting that at 3rd and Jordan, the bus was about 3 minutes late, however it reached IMU one minute early. This suggests that there is still space for optimizing the schedule. Multiple trips can also be selected as shown below to access trip information.
@@ -298,9 +301,11 @@ For example, the above shown trip is the 3rd trip of A1 on January 26th 2015. It
 Sometimes we are interested in only seeing  whether the bus has arrived on-time or early to the main stops. The below report is called the logistic report and is available on cloud. This gives the user the option to drill down a specific date, month, route then trip and displays the status.\\
 \includegraphics[scale=0.5]{resources/tableau6}\\[1cm] 
 For example the Feburary 2nd, A4 route, 1st trip reached all its stop ahead time.\\
+
 Thus care has been taken during this case study that due importance is given to usability of the output artifacts and can be used by the business people rather than just the esoteric data miners.
 \section{Visualization}
 Another aspect of the data is the ability to visualize the data to understand the route. Neo4j is used as the background data store for saving node data. pyMysql module was used to connect to mysql and py2neo was used to connect to the cloud instance.\\
+
 A python program was written to aggregate the data from MySql and load it to cloud Neo4j instance. Once the entire data is loaded, the graph looks as follows.\\
 \includegraphics[scale=0.8]{resources/neo4j1}\\[1cm] 
 A close in screenshot is as follows. The data model is created in such a way that each stops are represented as nodes and each directed arrow is the route. These edges has a properties like travel time at any given hour of the day and the nodes contain average dwell time in that stop for a given day\\
@@ -339,9 +344,9 @@ Late: delay of more than a minute to the scheduled time\\
 
 Thus, the logistic model would have 3 classes, On-Time, Early and Delayed.\\
 
-**Model 1** The model was built in such a way that the prediction in first stop would dependant on the time of the hour and the trip of the day.\\
-**Model 2** The second model was built in such a way that this would consider the status of arrival in the first stop, hour and the day of travel.\\
-**Iterative Models** The consecutive models for stops iteratively built on this process, all constant factors and the previous stop status
+\textbf{Model 1} The model was built in such a way that the prediction in first stop would dependant on the time of the hour and the trip of the day.\\
+\textbf{Model 2} The second model was built in such a way that this would consider the status of arrival in the first stop, hour and the day of travel.\\
+\textbf{Iterative Models} The consecutive models for stops iteratively built on this process, all constant factors and the previous stop status
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
 \begin{alltt}
