change about db

--- a/Documentation/final_report_v2.tex
+++ b/Documentation/final_report_v2.tex
@@ -213,7 +213,7 @@ In addition to the above said studies, an statistical model was developed in R t
 
 Following are the locations of the project artifacts:
 \begin{enumerate}
-\item The database schema is part of this report and the corresponding SQL is also attached with the report submission
+\item The database schema is part of this report and the corresponding SQLs are available at github url below
 \item Neo4j Cloud Database : \url{http://iubus.sb02.stations.graphenedb.com:24789/browser/}
 \item Tableau Public : \url{https://public.tableau.com/profile/ganesh.nagarajan#!/vizhome/RouteA/IUBus}
 \item GitHub Project URL : \url{https://github.com/sarvothaman/nefarious-octo-rutabaga}
